started list impl & click impl

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     </div>
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNihRlhXgkhKaBb5UzntYtJFn6e0nUj0U"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
+    <script src="libs/jquery-2.1.1.js"> </script>
+    <script src="libs/mustache.js"></script>
     <script src="libs/common_bundle.js"></script>
     <script src="libs/foundation.min.js"></script>
 
