--- a/src/content/main.html
+++ b/src/content/main.html
@@ -6,15 +6,19 @@
             <div id="map-canvas" style="width: 500px; height: 500px"></div>
         </div>
         <div class="column large-7 small-12" style="height:500px; overflow:auto">
-            <ul data-bind="foreach: reports">
-                <li style="width: 100%; " class="th">
-                    <img style="height: 140px; width: 140px;float:left; margin-right:0.8rem" data-bind="attr: {src: imageURL}">
-                    <h4 data-bind="text: title"></h4>
-                    <p style="font-size: 0.8rem;" data-bind="text: description"></p>
-                </li>
+            <ul id="reports-list">
+              
             </ul>
         </div>
     </div>
+    
+    <script id="report-template" type="x-tmpl-mustache">
+        <li style="width: 100%; " data-id="{{id}}" class="th">
+            <img style="height: 140px; width: 140px;float:left; margin-right:0.8rem" src="{{imageURL}}" >
+            <h4>{{title}}</h4>
+            <p style="font-size: 0.8rem;">{{description}}</p>
+        </li>
+    </script>
 
     <script src="/src/views/listView.js"></script>
     <script src="/src/views/mapView.js"></script>
