create report, parse-model, modal bugfixes

--- a/index.html
+++ b/index.html
@@ -11,54 +11,51 @@
 </head>
 
 <body>
-
-    <nav class="top-bar" data-topbar>
-        <ul class="title-area">
-            <li class="name">
-                <h1><a href="#/main">Lost and found</a></h1>
-            </li>
-
-            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-        </ul>
-
-        <section class="top-bar-section">
-            <!-- Right Nav Section -->
-            <ul class="right">
-                <li class="active"><a href="#/submitItem" style="width: 200px">Submit Report</a></li>
-                <li class="active"><a href="#/login" style="width: 200px">Login</a></li>
-                <li class="has-dropdown" hidden>
-                    <a href="#">Right Button Dropdown</a>
-                    <ul class="dropdown">
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Register</a></li>
-                    </ul>
+    <div div class="contain-to-grid fixed">
+        <nav class="top-bar" data-topbar>
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="#/main">Lost and found</a></h1>
                 </li>
+
+                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
             </ul>
 
-            <!-- Left Nav Section -->
-            <ul class="left">
-                <!--<li><a href="#">Left Nav Button</a></li>-->
-            </ul>
-        </section>
-    </nav>
-    <div id="content" style="position: relative">
+            <section class="top-bar-section">
+                <!-- Right Nav Section -->
+                <ul class="right">
+                    <li class="active"><a href="#/submitReport" >Anzeige anlegen</a></li>
+                </ul>
+
+                <!-- Left Nav Section -->
+                <ul class="left">
+                    <!--<li><a href="#">Left Nav Button</a></li>-->
+                </ul>
+            </section>
+        </nav>
+    </div>
+    <div class="content" style="position: relative">
         <div id="frame"></div>
     </div>
 
     <div id="modal" class="reveal-modal" data-reveal>
         <div id="modal-frame" class="modal-frame">
-            <h1>modal</h1>
         </div>
     </div>
+    
+    <div id="spinner" class="hidden"></div>
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNihRlhXgkhKaBb5UzntYtJFn6e0nUj0U"></script>
     <script src="libs/jquery-2.1.1.js"> </script>
     <script src="libs/mustache.js"></script>
     <script src="libs/common_bundle.js"></script>
     <script src="libs/foundation.min.js"></script>
+    <script src="libs/spin.js"></script>
+    <script src="libs/parse_1.3.0.js"></script>
 
     <script src="/src/LostAndFoundApp.js"></script>
+    <script src="/src/views/loadingView.js"></script>
     
     <script src="/src/views/icon.js"></script>
 
