--- a/src/content/report.html
+++ b/src/content/report.html
@@ -1,8 +1,8 @@
-﻿<div class="content">
+﻿<div >
     <div class="row">
         <div class="map-canvas" style="width: 100%; height: 200px"></div>
     </div>
-    <div class="row">
+    <div class="row report-details-content">
         <div class="column medium-9 details-frame" id="details-frame"></div>
         <div class="column medium-3">
             <ul class="row comments-list"></ul>
