--- a/src/content/main.html
+++ b/src/content/main.html
@@ -1,11 +1,9 @@
 ﻿<div class="row">
     <div class="map-canvas" style="width: 100%; height: 25rem"></div>
 </div>
-<div class="row">
-    <div class="button-group" style="width: 100%">
-        <div style="width: 49%" id="lost-button" class="button">Verlorengegangenes</div>
-        <div style="width: 49%" id="found-button" class="button">Gefundenes</div>
-    </div>
+<div class="row type-select" >
+    <div id="lost-button" class="button">Verlorengegangenes</div>
+    <div id="found-button" class="button">Gefundenes</div>
 </div>
 <div class="row pagination-centered">
     <ul class="pagination" id="pagination-frame"></ul>
@@ -17,15 +15,20 @@
         <ul id="reports-list" class="row reports-list"></ul>
     </div>
 </div>
+<div class="row pagination-centered">
+    <ul class="pagination" id="pagination-frame"></ul>
+</div>
 
 <script id="pagination-template" type="x-tmpl-mustache">
     {{#.}}
     <li data-id="{{page}}"class="{{class}}" id="{{id}}"><a>{{page}}</a></li>
     {{/.}}
 </script>
+
 <script id="page-template" type="x-tmpl-mustache">
     <li data-id="{{page}}" class="{{class}}" id="{{id}}"><a>{{page}}</a></li>
 </script>
+
 <script id="report-template" type="x-tmpl-mustache">
     <li style="width: 100%; " data-id="{{id}}" class="th">
         <img style="height: 140px; width: 140px;float:left; margin-right:0.8rem" src="{{imageURL}}">
@@ -33,6 +36,7 @@
         <p style="font-size: 0.8rem;">{{description}}</p>
     </li>
 </script>
+
 <script id="item-type-template" type="x-tmpl-mustache">
     <li style="width: 100%;" class="button item-type" data-id="{{id}}">
         {{name}}
