--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+    <div id="fb-root"></div>
+    <script>
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&appId=235547439794245&version=v2.0";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
     <div div class="contain-to-grid fixed">
         <nav class="top-bar" data-topbar>
             <ul class="title-area">
@@ -25,7 +34,7 @@
             <section class="top-bar-section">
                 <!-- Right Nav Section -->
                 <ul class="right">
-                    <li class="active"><a href="#/submitReport" >Anzeige anlegen</a></li>
+                    <li class="active"><a href="#/submitReport">Anzeige anlegen</a></li>
                 </ul>
 
                 <!-- Left Nav Section -->
@@ -35,7 +44,7 @@
             </section>
         </nav>
     </div>
-    <div class="content" style="position: relative">
+    <div style="position: relative">
         <div id="frame"></div>
     </div>
 
@@ -43,7 +52,7 @@
         <div id="modal-frame" class="modal-frame">
         </div>
     </div>
-    
+
     <div id="spinner" class="hidden"></div>
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNihRlhXgkhKaBb5UzntYtJFn6e0nUj0U"></script>
@@ -56,7 +65,7 @@
 
     <script src="/src/LostAndFoundApp.js"></script>
     <script src="/src/views/loadingView.js"></script>
-    
+
     <script src="/src/views/icon.js"></script>
 
     <script src="/src/model/primivites/primitivesmodel.js"></script>
