--- a/src/content/main.html
+++ b/src/content/main.html
@@ -1,27 +1,36 @@
-﻿<div class="row">
-    <div class="map-canvas" style="width: 100%; height: 25rem"></div>
-</div>
-<div class="row type-select" >
-    <div id="lost-button" class="button">Verlorengegangenes</div>
-    <div id="found-button" class="button">Gefundenes</div>
-</div>
-<div class="row pagination-centered">
-    <ul class="pagination" id="pagination-frame"></ul>
-</div>
-<div class="row">
-    <ul class="side-nav column medium-2" id="item-types" role="navigation" title="Categories"></ul>
-    <div class="column medium-10">
-        
-        <ul id="reports-list" class="row reports-list"></ul>
-    </div>
-</div>
-<div class="row pagination-centered">
-    <ul class="pagination" id="pagination-frame"></ul>
-</div>
+﻿<html>
+<head>
+    <title>Lost and Found</title>
+</head>
+    <body>
+        <div class="content">
+            <div class="row">
+                <div class="map-canvas" style="width: 100%; height: 25rem"></div>
+            </div>
+            <div class="row type-select">
+                <div id="lost-button" class="button">Verlorengegangenes</div>
+                <div id="found-button" class="button">Gefundenes</div>
+            </div>
+            <div class="row pagination-centered">
+                <ul class="pagination" id="pagination-frame"></ul>
+            </div>
+            <div class="row">
+                <ul class="column large-2 medium-3 side-nav" id="item-types" role="navigation" title="Categories"></ul>
+                <div class="column large-10 medium-9">
+
+                    <ul id="reports-list" class="reports-list"></ul>
+                </div>
+            </div>
+            <div class="row pagination-centered">
+                <ul class="pagination" id="pagination-frame"></ul>
+            </div>
+        </div>
+    </body>
+</html>
 
 <script id="pagination-template" type="x-tmpl-mustache">
     {{#.}}
-    <li data-id="{{page}}"class="{{class}}" id="{{id}}"><a>{{page}}</a></li>
+    <li data-id="{{page}}" class="{{class}}" id="{{id}}"><a>{{page}}</a></li>
     {{/.}}
 </script>
 
@@ -30,9 +39,10 @@
 </script>
 
 <script id="report-template" type="x-tmpl-mustache">
-    <li style="width: 100%; " data-id="{{id}}" class="th">
-        <img style="height: 140px; width: 140px;float:left; margin-right:0.8rem" src="{{imageURL}}">
+    <li style="width: 100%; " data-id="{{id}}" class="th content">
+        <img style="width:140px; float:left; margin-right:1rem;" src="{{imageURL}}">
         <h4>{{title}}</h4>
+        <h5 class="subhheader"><span>{{reward}} € Finderlohn</span></h5>
         <p style="font-size: 0.8rem;">{{description}}</p>
     </li>
 </script>
