--- a/src/content/report.html
+++ b/src/content/report.html
@@ -1,21 +1,19 @@
-﻿<div >
+﻿
+<title>Anzeige</title>
+<div>
     <div class="row">
         <div class="map-canvas" style="width: 100%; height: 200px"></div>
     </div>
     <div class="row report-details-content">
-        <div class="column medium-9 details-frame" id="details-frame"></div>
-        <div class="column medium-3">
-            <ul class="row comments-list"></ul>
-            <div class="row">
-                <input type="text" id="comment-input" class="comment-input" />
-                <button id="submit-comment">submit</button>
-            </div>
+        <div class="column small-11 details-frame" id="details-frame"></div>
+        <div class="column small-1">
+            <div class="fb-share-button facebook-control"></div>
         </div>
     </div>
-    <div class="row" >
-      
+    <div class="row report-details-content">
+        <div style="width: 100%" data-width="100%" class="fb-comments facebook-control" id="facebook-comments" data-order-by="reverse_time" data-numposts="3" data-colorscheme="light"></div>
     </div>
-    
+
 </div>
 
 <script id="comment-template" type="x-tmpl-mustache">
@@ -29,11 +27,21 @@
 
 <script id="report-detail-template" type="x-tmpl-mustache">
     <div class="row">
-        <div class="column medium-5">
+        <div class="column large-4 medium-5">
             <img style="width:100%" src="{{imageURL}}">
         </div>
-        <div class="column medium-7">
-                       <h2>{{title}}</h2>
+        <div class="column large-8 medium-7">
+            <div class="row">
+                <div class="columns medium-7">
+                    <h3 class="subheader">{{title}}</h3>
+                    <h5 class="subheader">{{reward}} € Finderlohn </h5>
+                </div>
+                {{#email}}
+                <div class="columns medium-5">
+                    <a class="button secondary small" href="mailto:{{email}}">kontaktieren</a>
+                </div>
+                {{/email}}
+            </div>
             <p style="font-size: 0.8rem;">{{description}}</p>
         </div>
     </div>
