--- a/src/content/main.html
+++ b/src/content/main.html
@@ -40,9 +40,13 @@
 
 <script id="report-template" type="x-tmpl-mustache">
     <li style="width: 100%; " data-id="{{id}}" class="th content">
-        <img style="width:140px; float:left; margin-right:1rem;" src="{{imageURL}}">
-        <h4>{{title}}</h4>
-        <h5 class="subhheader"><span>{{reward}} € Finderlohn</span></h5>
+        <img style="width:140px; float:left; margin-right:1rem;" src="{{getImage}}">
+        <h4>
+            {{title}}
+            {{#reward}}
+            <span><small><b>{{reward}}€ </b>Finderlohn</small></span>
+            {{/reward}}
+        </h4>
         <p style="font-size: 0.8rem;">{{description}}</p>
     </li>
 </script>
