--- a/src/content/report.html
+++ b/src/content/report.html
@@ -5,9 +5,16 @@
         <div class="map-canvas" style="width: 100%; height: 200px"></div>
     </div>
     <div class="row report-details-content">
-        <div class="column small-11 details-frame" id="details-frame"></div>
-        <div class="column small-1">
-            <div class="fb-share-button facebook-control"></div>
+        <div class="column small-10 details-frame" id="details-frame"></div>
+        <div class="column small-2">
+            <ul class="button-group stack-for-small">
+                <li class="button small facebook-button">
+                    <span></span>share on facebook
+                </li>
+                <li class="button small twitter-button">
+                    <span></span>share on twitter
+                </li>
+            </ul>
         </div>
     </div>
     <div class="row report-details-content">
@@ -28,13 +35,15 @@
 <script id="report-detail-template" type="x-tmpl-mustache">
     <div class="row">
         <div class="column large-4 medium-5">
-            <img style="width:100%" src="{{imageURL}}">
+            <img style="width:100%" src="{{getImage}}">
         </div>
         <div class="column large-8 medium-7">
             <div class="row">
                 <div class="columns medium-7">
                     <h3 class="subheader">{{title}}</h3>
+                    {{#email}}
                     <h5 class="subheader">{{reward}} € Finderlohn </h5>
+                    {{/email}}
                 </div>
                 {{#email}}
                 <div class="columns medium-5">
@@ -49,3 +58,5 @@
 <script src="/src/views/mapView.js"></script>
 <script src="/src/views/reportView.js"></script>
 <script src="/src/views/commentsView.js"></script>
+<script src="/src/views/shareView.js"></script>
+<script src="/src/controllers/shareController.js"></script>
