--- a/src/content/submitReport.html
+++ b/src/content/submitReport.html
@@ -1,73 +1,85 @@
 ﻿<!--Formular für Anzeigen-->
 <title>Anzeige aufgeben</title>
-<form data-abide="ajax" id="report-form" class="row content submit-report-content">
-    <div class="map-canvas"></div>
+<div class="row content submit-report-content">
+    <div style="position:relative">
+        <div class="map-canvas"></div>
+        <div class="set-location-hint ">
+            <h6 class="submit-hint" data-found="Markiere den Punkt, an dem du den Gegenstand gefunden hast, indem du den Marker dahin bewegst."
+                data-lost="Markiere den Punkt, an dem du den Gegenstand verloren hast, indem du den Marker dahin bewegst.">
+            </h6>
+        </div>
+    </div>
 
     <div class="row type-select">
         <div id="lost-button" class="button">Verloren</div>
         <div id="found-button" class="button">Gefunden</div>
     </div>
 
-    <div class="row">
-        <div class="column medium-4">
-            <label for="category-select" data-found="Was hast du gefunden?"
-                   data-lost='Was hast du verloren?'>
-                Was hast du verloren?
-            </label>
-            <select id="category-select"></select>
-        </div>
-        <div class="column medium-4">
-            <label for="date-input" data-found="Wann hast du es gefunden?"
-                   data-lost="Wann hast du es verloren?">
-                Wann hast du es verloren?
-            </label>
-            <input id="date-input" type="date" />
-        </div>
-        <div class="column medium-4">
-            <div>
-                <div style="float:left">
-                    <label for="report-reward" data-found="Was stellst du dir als Finderlohn vor?"
-                           data-lost="Was würdest du dem Finder zahlen?">
-                        Was würdest du dem Finder zahlen?
-                    </label>
-                    <input type="number" id="report-reward" placeholder="Finderlohn" />
+    <form data-abide="ajax" id="report-form">
+        <div class="row">
+            <div class="column medium-4">
+                <label for="category-select"
+                       class="submit-hint"
+                       data-found="Was hast du gefunden?"
+                       data-lost='Was hast du verloren?'>
+                </label>
+                <select id="category-select" required></select>
+            </div>
+            <div class="column medium-4">
+                <label for="date-input"
+                       class="submit-hint"
+                       data-found="Wann hast du es gefunden?"
+                       data-lost="Wann hast du es verloren?">
+                </label>
+                <input id="date-input" type="date" />
+            </div>
+            <div class="column medium-4">
+                <div>
+                    <div style="float:left">
+                        <label for="report-reward"
+                               class="submit-hint"
+                               data-found="Was stellst du dir als Finderlohn vor?"
+                               data-lost="Was würdest du dem Finder zahlen?">
+                        </label>
+                        <input type="number" id="report-reward" placeholder="Finderlohn" />
+                    </div>
+                    <h3 style="margin-top: 1rem; margin-left: 1rem; float:left">€</h3>
                 </div>
-                <h3 style="margin-top: 1rem; margin-left: 1rem; float:left">€</h3>
             </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="column medium-8">
-            <label>
-                Titel
-                <input type="text" required id="report-title" placeholder="Wähle einen Titel für deinen Bericht." />
-            </label>
-            <div>
+        <div class="row">
+            <div class="column medium-8">
                 <label>
-                    Beschreibung
-                    <textarea id="report-description" class="description-input" placeholder="Beschreibung"></textarea>
+                    Titel
+                    <input type="text" required id="report-title" placeholder="Wähle einen Titel für deinen Bericht." />
                 </label>
+                <div>
+                    <label>
+                        Beschreibung
+                        <textarea id="report-description" class="description-input" placeholder="Beschreibung"></textarea>
+                    </label>
+                </div>
+                <div>
+                    <h3 class="subheader">Kontakt</h3>
+                </div>
+                <div>
+                    <label><span class="submit-hint"
+       data-found="Gib deine Email Adresse an, wenn du möchtest, dass der Eigentümer sich bei dir melden kann."
+       data-lost="Gib deine Email Adresse an, wenn du möchtest, dass der Finder sich bei dir melden kann."></span>
+                        <input id="contact-email" type="email" placeholder="Email" />
+                    </label>
+                </div>
+                <button type="submit" class="button submit-button">Absenden</button>
             </div>
-            <div>
-                <h3 class="subheader">Kontakt</h3>
+            <div class="column medium-4">
+                <input style="display: none" type="file" accept="image/*" id="file-input">
+                <div class="button" id="upload-image" style="width: 100%; top:20px">Bild hochladen</div>
+                <div id="preview" class="th hidden"></div>
             </div>
-            <div>
-                <label class="column medium-6">
-                    Email
-                    <input id="contact-email" type="email" placeholder="Email" />
-                </label>
-            </div>
-            <button type="submit" class="button submit-button">Absenden</button>
         </div>
-        <div class="column medium-4">
-            <input style="display: none" type="file" accept="image/*" id="file-input">
-            <div class="button" id="upload-image" style="width: 100%; top:20px">Bild hochladen</div>
-            <div id="preview" class="th hidden"></div>
-        </div>
-    </div>
-</form>
-
+    </form>
+</div>
 
 <script id="category-options-template" type="x-tmpl-mustache">
     {{#.}}
