--- a/src/content/submitReport.html
+++ b/src/content/submitReport.html
@@ -75,7 +75,8 @@
             <div class="column medium-4">
                 <input style="display: none" type="file" accept="image/*" id="file-input">
                 <div class="button" id="upload-image" style="width: 100%; top:20px">Bild hochladen</div>
-                <div id="preview" class="th hidden"></div>
+                <div id="preview" class="th hidden">
+                </div>
             </div>
         </div>
     </form>
