--- a/public/start.html
+++ b/public/start.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Lost and found</title>
+    <title>Fundgrube</title>
     <link href="res/css/normalize.css" rel="stylesheet" />
     <link href="res/css/foundation.css" rel="stylesheet" />
     <link href="res/css/styles.css" rel="stylesheet" />
@@ -87,7 +87,6 @@
         $(document).foundation();
     </script>
     <script>
-        console.log("href:",window.location.href);
         LostAndFound.App.init();
     </script>
 
