--- a/public/start.html
+++ b/public/start.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Fundgrube</title>
-    <link href="res/css/normalize.css" rel="stylesheet" />
-    <link href="res/css/foundation.css" rel="stylesheet" />
-    <link href="res/css/styles.css" rel="stylesheet" />
+    <link href="/res/css/normalize.css" rel="stylesheet" />
+    <link href="/res/css/foundation.css" rel="stylesheet" />
+    <link href="/res/css/styles.css" rel="stylesheet" />
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNihRlhXgkhKaBb5UzntYtJFn6e0nUj0U"></script>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         <nav class="top-bar" data-topbar>
             <ul class="title-area">
                 <li class="name">
-                    <h1><a href="#/main">Lost and found</a></h1>
+                    <h1><a href="#/">Lost and found</a></h1>
                 </li>
 
                 <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
@@ -64,25 +64,24 @@
 
     <div id="spinner" class="hidden"></div>
 
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNihRlhXgkhKaBb5UzntYtJFn6e0nUj0U"></script>
-    <script src="libs/jquery-2.1.1.js"> </script>
-    <script src="libs/mustache.js"></script>
-    <script src="libs/common_bundle.js"></script>
-    <script src="libs/foundation.min.js"></script>
-    <script src="libs/spin.js"></script>
-    <script src="libs/parse_1.3.0.js"></script>
+    <script src="/libs/jquery-2.1.1.js"> </script>
+    <script src="/libs/mustache.js"></script>
+    <script src="/libs/common_bundle.js"></script>
+    <script src="/libs/foundation.min.js"></script>
+    <script src="/libs/spin.js"></script>
+    <script src="/libs/parse_1.3.0.js"></script>
 
-    <script src="src/LostAndFoundApp.js"></script>
-    <script src="src/views/loadingView.js"></script>
+    <script src="/src/LostAndFoundApp.js"></script>
+    <script src="/src/views/loadingView.js"></script>
 
-    <script src="src/views/icon.js"></script>
+    <script src="/src/views/icon.js"></script>
 
-    <script src="src/model/primivites/primitivesmodel.js"></script>
-    <script src="src/model/requests/requestsbundle.js"></script>
-    <script src="src/model/_modelbundle.js"></script>
+    <script src="/src/model/primivites/primitivesmodel.js"></script>
+    <script src="/src/model/requests/requestsbundle.js"></script>
+    <script src="/src/model/_modelbundle.js"></script>
 
-    <script src="src/model/dummy/primivites/dummyprimivitesbundle.js"></script>
-    <script src="src/model/dummy/_modelbundle.js"></script>
+    <script src="/src/model/dummy/primivites/dummyprimivitesbundle.js"></script>
+    <script src="/src/model/dummy/_modelbundle.js"></script>
     <script>
         $(document).foundation();
     </script>
